# schoolwork

./: .env.example  .gitignore  README.md  alembic.ini  app.db-shm  app.db-wal  pyproject.toml
.claude/: launch.json
.claude/agents/: schoolwork.md
backend/app/: config.py  db.py  main.py  syllabus_links.py
backend/app/channels/: base.py  email.py  inapp.py  telegram.py
backend/app/jobs/: anomaly_explain_job.py  brief_warmup_job.py  digest_job.py  mindspark_job.py  repair_job.py  retention_job.py  scheduler.py  syllabus_job.py  sync_job.py
backend/app/llm/: client.py
backend/app/mcp/: server.py
backend/app/models/: __init__.py  attachments.py  (+22 more)
backend/migrations/: env.py
backend/scripts/: explore_portal.py  fetch_syllabus.py  harvest_resources.py  inspect_portal_home.py  inspect_student_overview.py  manual_login.py  migrate_data_layout.py  mindspark_recon.py  seed_children.py  sunday_brief_preview.py  test_llm.py  verify_system.py
data/syllabus/: class_4_2026-27.json  class_6_2026-27.json
docs/: BUILDSPEC.md  BUILDSPEC_ADDENDUM_MCP.md  MCP.md  SITE_MAP.md
docs/research/: IMPLEMENTATION_PLAN.md  SYNTHESIS.md  pedagogy_and_monitoring.md  world_class_ui.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tls-proxy.cjs  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
mockups/: attention-lifecycle.html
scripts/: build_sitemap.py  harvest_components.py  parse_syllabus.py  probe_embed.py  probe_grade_detail.py  probe_grade_report.py  recon.py
src/schoolwork/: config.py
(+4554 files in other folders)
