[project]
name = "schoolwork"
version = "0.2.0"
description = "Parent Cockpit for Vasant Valley School Veracross portal — scraper + API + MCP server"
requires-python = ">=3.11"
dependencies = [
    # Recon / scraper
    "playwright>=1.48",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "tenacity>=9.0",
    # Web + DB
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "aiosqlite>=0.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "email-validator>=2.2",
    "jinja2>=3.1",
    # LLM + MCP
    "mcp>=1.0",
    "pypdf>=5.1",
    # Scheduling + HTTP
    "apscheduler>=3.10",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    # Dev UX
    "rich>=13.9",
    "tf-playwright-stealth>=1.2.0",
]

[project.scripts]
schoolwork-mcp = "backend.app.mcp.server:run_stdio"
schoolwork-api = "backend.app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schoolwork", "backend/app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.alembic]
script_location = "backend/migrations"
